--- a/css/style.css
+++ b/css/style.css
@@ -809,7 +809,8 @@ address dd{
   font-style:italic;
 }
 .rightConcept a{
-  font-size:10px;
+  font-size:14px;
   line-height:17px;
+  font-style:italic;
   color:#7f7f7f;
 }
