--- a/css/style.css
+++ b/css/style.css
@@ -778,9 +778,9 @@ html, body {
 }
 .footerTip {
   font-size: 8px;
-  line-height: 14px;
+  line-height: 8px;
   font-weight: lighter;
-  color: #999999;
+  color: #666666;
 }
 #service-concept {
   position: absolute;
@@ -802,14 +802,14 @@ address dd{
   line-height:21px;
   color:#b2b2b2;
 }
-.rightConcept{
+.concept{
   font-size:30px;
   line-height:30px;
   color:#222222;
   font-style:italic;
 }
-.rightConcept a{
-  font-size:14px;
+.concept a{
+  font-size:10px;
   line-height:17px;
   font-style:italic;
   color:#7f7f7f;
