--- a/css/style.css
+++ b/css/style.css
@@ -814,3 +814,8 @@ address dd{
   font-style:italic;
   color:#7f7f7f;
 }
+.contentHeader{
+  font-size:20px;
+  font-style:Italic;
+  text-align:right;
+}
